2011-11-25 22:37  dm8tbr

	* trunk/icecast/conf/icecast.xml.in:
	  Added 'admin' and 'location' to default config, thus fixing
	  #1839.

2011-11-25 22:17  ph3-der-loewe

	* trunk/icecast/src/cfgfile.c, trunk/icecast/conf/icecast.xml.in,
	  trunk/icecast/conf/icecast_urlauth.xml.in,
	  trunk/icecast/conf/icecast_minimal.xml.in: Updated <alias>
	  to use destination="" not dest="". The old dest="" attribute
	  is still supported.

2011-11-25 22:11  dm8tbr

	* trunk/icecast/src/cfgfile.c trunk/icecast/src/cfgfile.h
	  trunk/icecast/src/connection.c:
          Applied justdave's patches, fixing #1717 and #1718.
	  HTTPS now with better security and support for chained
          certificates.

2011-11-25 21:20  ph3-der-loewe

	* trunk/icecast/AUTHORS, trunk/icecast/src/cfgfile.c.
	  trunk/icecast/src/connection.c: Allow the source password
	  to be undefined. This is to avoid falling back to a default
	  password which would be a security problem. Fixing #1846

----------------------------------------------------------------------
	Everything above is post 2.3.2. The stuff below is incomplete.
	The time zone above is UTC, the time zone below is unknown.
	ph3-der-loewe, Fri Nov 25 21:20:58 UTC 2011
----------------------------------------------------------------------
2005-11-29 03:06  karl

	* trunk/icecast/src/auth_url.c: update for authentication header
	  via libcurl. allows for http://user:pass@host.. else the param
	  specified user/pass. In the case of listener_add/remove use the
	  client provided user/pass if no others are specified.

2005-11-20 13:53  karl

	* trunk/icecast/src/source.c: allow for the intro file to change
	  over HUP

2005-11-17 00:54  karl

	* trunk/icecast/src/auth.c, trunk/icecast/src/client.c,
	  trunk/icecast/src/client.h, trunk/icecast/src/connection.c:
	  change status code for server/stream full cases (#738), also
	  some others places where connections are terminated.

2005-11-15 00:36  karl
